--- a/EnglishHelper/EnglishHelper.Core/Core.csproj
+++ b/EnglishHelper/EnglishHelper.Core/Core.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JsonHelper.cs" />
+    <Compile Include="KeyManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Translator.cs" />
   </ItemGroup>
