--- a/EnglishHelper/EnglishHelper.Core/Core.csproj
+++ b/EnglishHelper/EnglishHelper.Core/Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="JsonHelper.cs" />
     <Compile Include="KeyManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializationHelper.cs" />
     <Compile Include="Translator.cs" />
   </ItemGroup>
   <ItemGroup>
