Configuration settings now read from app.config

--- a/EnglishHelper/EnglishHelper.Client/App.config
+++ b/EnglishHelper/EnglishHelper.Client/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="KeyHyperLink" value="https://tech.yandex.com/translate" />
+    <add key="DictionaryFileName" value="Dictionary.xml" />
+    <add key="KeyFileName" value="API key.xml" />
+  </appSettings>
 </configuration>
