DictionaryWindow was added;

--- a/EnglishHelper/EnglishHelper.Client/App.config
+++ b/EnglishHelper/EnglishHelper.Client/App.config
@@ -7,5 +7,6 @@
     <add key="KeyHyperLink" value="https://tech.yandex.com/translate" />
     <add key="DictionaryFileName" value="Dictionary.xml" />
     <add key="KeyFileName" value="API key.xml" />
+    <add key="TranslateAddress" value="https://translate.yandex.net/api/v1.5/tr.json/translate?" />
   </appSettings>
 </configuration>
