.NET Framework version was changed to 4.5

--- a/EnglishHelper/EnglishHelper.Client/App.config
+++ b/EnglishHelper/EnglishHelper.Client/App.config
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
   <appSettings>
-    <add key="KeyHyperLink" value="https://tech.yandex.com/translate" />
-    <add key="DictionaryFileName" value="Dictionary.xml" />
-    <add key="KeyFileName" value="API key.xml" />
-    <add key="TranslateAddress" value="https://translate.yandex.net/api/v1.5/tr.json/translate?" />
+    <add key="KeyHyperLink" value="https://tech.yandex.com/translate"/>
+    <add key="DictionaryFileName" value="Dictionary.xml"/>
+    <add key="KeyFileName" value="API key.xml"/>
+    <add key="TranslateAddress" value="https://translate.yandex.net/api/v1.5/tr.json/translate?"/>
   </appSettings>
 </configuration>
