--- a/EnglishHelper/EnglishHelper.Client/Client.csproj
+++ b/EnglishHelper/EnglishHelper.Client/Client.csproj
@@ -145,6 +145,12 @@
   <ItemGroup>
     <Resource Include="Images\swap64x64.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\rus64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\usa64.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
