--- a/EnglishHelper/EnglishHelper.Core/Core.csproj
+++ b/EnglishHelper/EnglishHelper.Core/Core.csproj
@@ -50,6 +50,7 @@
     <Compile Include="JsonHelper.cs" />
     <Compile Include="KeyManager.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="MouseHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializationHelper.cs" />
     <Compile Include="Translator.cs" />
